test_yuriiq/catalog/language/german/checkout/checkout.php
<?php

// text
$_['text_cart']	= 'Warenkorb';
$_['text_checkout_payment_address']	= 'Schritt 2: Rechnungsdetails';
$_['text_recurring']	= '%s every %s %s';
$_['text_agree']	= 'Ich habe die <a class="fancybox" href="%s" alt="%s"><b>%s</b></a> gelesen und verstanden.';
$_['text_payment_profile']	= 'Zahlungs Profil';
$_['text_checkout_shipping_address']	= 'Schritt 4: Lieferdetails';
$_['text_checkout']	= 'Optionen:';
$_['text_register_account']	= 'Mit dem Anlegen eines Kontos erfolgen zukünftige Bestellungen schneller, der Auftragsstatus kann nachverfolgt, bisherige Bestellungen angesehen, sowie persönliche Daten bearbeitet werden.';
$_['text_your_address']	= 'Ihre Adresse';
$_['text_checkout_shipping_method']	= 'Schritt 3: Versandart';
$_['text_day']	= 'Tag';
$_['text_address_existing']	= 'Ich möchte eine bereits bestehende Rechnungsadresse nutzen.';
$_['text_month']	= 'Monat';
$_['text_shipping_method']	= 'Bitte die gewünschte Versandart für diesen Auftrag wählen.';
$_['text_comments']	= 'Neuer Kommentar für den Auftrag';
$_['text_week']	= 'Woche';
$_['text_payment_method']	= 'Bitte die gewünschte Zahlungsmethode für diesen Auftrag wählen.';
$_['text_payment_description']	= '%s every %d %s(s) for %d payment(s)';
$_['text_checkout_payment_method']	= 'Schritt 5: Zahlungsmethode';
$_['text_register']	= 'Neues Konto anlegen';
$_['text_address_new']	= 'Ich möchte eine neue Rechnungsadresse nutzen.';
$_['text_trial_description']	= '%s every %d %s(s) for %d payment(s) then';
$_['text_your_details']	= 'Persönliche Angaben';
$_['text_i_am_returning_customer']	= 'Ich bin bereits Kunde';
$_['text_guest']	= 'Direktbestellung';
$_['text_returning_customer']	= 'Ich bin bereits Kunde';
$_['text_recurring_item']	= 'Wiederkehrende Artikel';
$_['text_trial']	= '%s every %s %s for %s payments then ';
$_['text_year']	= 'Jahr';
$_['text_checkout_account']	= 'Schritt 2: Konto- & Rechnungsdetails';
$_['text_semi_month']	= 'Halb Monat';
$_['text_length']	= ' for %s payments';
$_['text_payment_until_canceled_description']	= '%s every %d %s(s) until canceled';
$_['text_modify']	= 'Ändern &raquo;';
$_['text_your_password']	= 'Passwort';
$_['text_forgotten']	= 'Passwort vergessen';
$_['text_new_customer']	= 'Ich habe noch kein Konto';
$_['text_checkout_confirm']	= 'Schritt 6: Auftrag bestätigen';
$_['text_checkout_option']	= 'Schritt 1: Optionen';

// error
$_['error_no_shipping']	= 'Es sind keine Versandarten verfügbar. Bitte <a href="%s">kontaktieren</a> Sie uns für Hilfe!';
$_['error_exists']	= 'Diese Emailadresse ist bereits registriert!';
$_['error_firstname']	= 'Vorname muss zwischen 1 und 32 Zeichen lang sein!';
$_['error_postcode']	= 'Postleitzahl muss zwischen 2 und 10 Zeichen lang sein.';
$_['error_telephone']	= 'Telefon muss zwischen 3 und 32 Zeichen lang sein!';
$_['error_warning']	= 'Es ist ein Problem bei der Verarbeitung Ihres Auftrags aufgetreten! Wenn das Problem weiter besteht wählen Sie bitte eine andere Zahlungsmethode aus oder kontaktieren Sie den Shopinhaber <a href="%s">hier</a>.';
$_['error_address']	= 'Sie müssen eine Adresse auswählen!';
$_['error_address_1']	= 'Adresszeile 1 muss zwischen 3 und 128 Zeichen lang sein!';
$_['error_zone']	= 'Bitte ein Bundesland wählen!';
$_['error_agree']	= 'Sie müssen den %s Bedingungen zustimmen!';
$_['error_country']	= 'Bitte ein Land wählen!';
$_['error_password']	= 'Passwort muss zwischen 3 und 20 Zeichen lang sein!';
$_['error_approved']	= 'Warnung: Ihr Konto erfordert Zustimmung, bevor Sie sich anmelden können.';
$_['error_vat']	= 'VAT number is invalid!';
$_['error_tax_id']	= 'Tax ID required!';
$_['error_email']	= 'Emailadresse ist nicht gültig!';
$_['error_payment']	= 'Die Zahlungsmethode ist ein Pflichtfeld!';
$_['error_confirm']	= 'Passwort und Bestätigung stimmt nicht überein!';
$_['error_city']	= 'Stadt muss zwischen 2 und 128 Zeichen lang sein!';
$_['error_shipping']	= 'Die Versandart ist ein Pflichtfeld!';
$_['error_login']	= 'Diese Emailadresse und/oder Passwort ist/sind nicht korrekt.';
$_['error_lastname']	= 'Nachname muss zwischen 1 und 32 Zeichen lang sein!';
$_['error_no_payment']	= 'Es sind keine Zahlungsmethoden verfügbar. Bitte <a href="%s">kontaktieren</a> Sie uns für Hilfe!';
$_['error_company_id']	= 'Company ID required!';

// entry
$_['entry_firstname']	= 'Vorname:';
$_['entry_city']	= 'Stadt:';
$_['entry_customer_group']	= 'Business-Typ:';
$_['entry_password']	= 'Passwort:';
$_['entry_email']	= 'Email:';
$_['entry_telephone']	= 'Telefon:';
$_['entry_company_id']	= 'Unternehmens-ID:';
$_['entry_tax_id']	= 'Steuer-ID:';
$_['entry_zone']	= 'Bundesland:';
$_['entry_fax']	= 'Fax:';
$_['entry_postcode']	= 'Postleitzahl:';
$_['entry_newsletter']	= 'Ich möchte mich für den %s Newsletter anmelden.';
$_['entry_address_1']	= 'Adresszeile 1:';
$_['entry_address_2']	= 'Adresszeile 2:';
$_['entry_confirm']	= 'Passwort bestätigen:';
$_['entry_email_address']	= 'Emailadresse:';
$_['entry_lastname']	= 'Nachname:';
$_['entry_company']	= 'Firma:';
$_['entry_shipping']	= 'Meine Liefer- und Rechnungsadresse stimmen überein.';
$_['entry_country']	= 'Land:';

// column
$_['column_model']	= 'Modell';
$_['column_name']	= 'Bezeichnung';
$_['column_total']	= 'Summe';
$_['column_quantity']	= 'Menge';
$_['column_price']	= 'Preis';

// heading
$_['heading_title']	= 'Kasse';
?>